--- a/Day_4_CSS_Interm/float.css
+++ b/Day_4_CSS_Interm/float.css
@@ -1,8 +1,11 @@
 .left-float {
     float : left;
     margin:20px;
+    background-color: rgb(10, 10, 10, 0.3);
 }
+
 .right-float {
     float : right;
     margin: 20px;
+    background-color: black;
 }
